加入Tapestry5-ioc的一些属性

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 			<version>2.0.0-M5</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.tapestry</groupId>
+			<artifactId>tapestry-ioc</artifactId>
+			<version>5.1.0.4</version>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.5.2</version>
