add distributed responsitory

--- a/pom.xml
+++ b/pom.xml
@@ -56,4 +56,14 @@
 			</plugin>
 		</plugins>
 	</build>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>fepss.snapshots</id>
+      <url>http://app.fepss.com/nexus/content/repositories/fepss-snapshots/</url>
+    </snapshotRepository>
+    <repository>
+      <id>fepss.releases</id>
+      <url>http://app.fepss.com/nexus/content/repositories/fepss/</url>
+    </repository>
+  </distributionManagement>
 </project>
