--- a/pom.xml
+++ b/pom.xml
@@ -54,19 +54,31 @@
 					<optimize>true</optimize>
 				</configuration>
 			</plugin>
+			<plugin>
+				<!-- Entry needed to create, install and deploy sources jars -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
-  <distributionManagement>
-    <snapshotRepository>
-      <id>fepss.snapshots</id>
-      <url>http://app.fepss.com/nexus/content/repositories/fepss-snapshots/</url>
-    </snapshotRepository>
-    <repository>
-      <id>fepss.releases</id>
-      <url>http://app.fepss.com/nexus/content/repositories/fepss/</url>
-    </repository>
-  </distributionManagement>
-   <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>fepss.snapshots</id>
+			<url>http://app.fepss.com/nexus/content/repositories/fepss-snapshots/</url>
+		</snapshotRepository>
+		<repository>
+			<id>fepss.releases</id>
+			<url>http://app.fepss.com/nexus/content/repositories/fepss/</url>
+		</repository>
+	</distributionManagement>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
