--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,36 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+					</archive>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>bundle-manifest</id>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>manifest</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<instructions>
+						<Export-Package>com.fepss.rpc.client.*</Export-Package>
+						<Private-Package>com.fepss.rpc.server.*</Private-Package>
+<!--						<Bundle-Activator>org.foo.myproject.impl1.Activator</Bundle-Activator>-->
+					</instructions>
+				</configuration>
+
+			</plugin>
 		</plugins>
 	</build>
 	<distributionManagement>
