modify repository url

--- a/pom.xml
+++ b/pom.xml
@@ -101,11 +101,11 @@
 	<distributionManagement>
 		<snapshotRepository>
 			<id>fepss.snapshots</id>
-			<url>http://app.fepss.com/nexus/content/repositories/fepss-snapshots/</url>
+			<url>http://dev.fepss.com/nexus/content/repositories/fepss-snapshots/</url>
 		</snapshotRepository>
 		<repository>
 			<id>fepss.releases</id>
-			<url>http://app.fepss.com/nexus/content/repositories/fepss/</url>
+			<url>http://dev.fepss.com/nexus/content/repositories/fepss/</url>
 		</repository>
 	</distributionManagement>
 	<properties>
