--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>org.apache.mina</groupId>
 			<artifactId>mina-core</artifactId>
-			<version>2.0.0-M5</version>
+			<version>2.0.0-M6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tapestry</groupId>
@@ -52,6 +52,7 @@
 					<source>1.6</source>
 					<target>1.6</target>
 					<optimize>true</optimize>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
