--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.fepss.rpc</groupId>
 	<artifactId>rpc-core</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2.0</version>
+	<version>0.2.1-SNAPSHOT</version>
 
 	<name>Fepss  RPC Core Service</name>
 	<dependencies>
