--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.fepss.rpc</groupId>
-	<artifactId>rpc-core</artifactId>
+	<artifactId>fepss-rpc</artifactId>
 	<packaging>jar</packaging>
 	<version>0.2.1-SNAPSHOT</version>
 
